added many features